Segundo maquetado de header y a medias de Hero-section

--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
 </head>
 <body>
     <header class="Header-Desktop">
+        <h1 class="Web-title maq"></h1>
+        <nav class="Header-Menu maq"></nav>
+        <button class="Primary-button maq"></button>
     </header>
-    <section class="Hero-section">
-        <nav class="Header-Menu"></nav>
+
+    <section class="Hero-section">  
+        <div class="Hero-div-text maq"></div>
+        <img class="Hero-img maq" src="" alt="">
+        <div class="div-numbers maq"></div>
     </section>
-    <section class="Services-section"></section>
-    <section class="About-section"></section>
-    <section class="Contact-section"></section>
+
+    <section class="Services-section">        
+    </section>
+
+    <section class="About-section">
+    </section>
+    
+    <section class="Contact-section">
+    </section>
+
     <footer>
     </footer>
 </body>
