Finalizado el segundo maquetado: cajas por seccion

--- a/index.html
+++ b/index.html
@@ -19,16 +19,26 @@
         <div class="div-numbers maq"></div>
     </section>
 
-    <section class="Services-section">        
+    <section class="Services-section">
+        <h2 class="section-heat-text maq"></h2>
+        <h3 class="section-title maq"></h3>       
+        <div class="div-cards-services maq">
+        </div>
     </section>
 
     <section class="About-section">
+        <img class="about-img maq" src="" alt="">
+        <div class="about-div-text maq"></div>
     </section>
     
     <section class="Contact-section">
+        <div class="contact-div maq"></div>
+        <img class="contact-img maq" src="" alt="">
     </section>
 
     <footer>
+        <div class="footer-div-info maq"></div>
+        <div class="div-social-media maq"></div>
     </footer>
 </body>
 </html>
