Inicio de responsive con medias query

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <h1 class="Web-title maq"></h1>
         <nav class="Header-Menu maq"></nav>
         <button class="Primary-button maq"></button>
+        <picture>
+            <img class="Mobile-Menu" src="./public/Icon.svg" alt="Mobile Menu">
+        </picture>
     </header>
 
     <section class="Hero-section">  
