Primer imagen agregada

--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
         <h1 class="Web-title maq"></h1>
         <nav class="Header-Menu maq"></nav>
         <button class="Primary-button maq"></button>
-        <picture>
+        <picture class="header-picture">
             <img class="Mobile-Menu" src="./public/Icon.svg" alt="Mobile Menu">
         </picture>
     </header>
 
     <section class="Hero-section">  
         <div class="Hero-div-text maq"></div>
-        <img class="Hero-img maq" src="" alt="">
+        <picture>
+            <source srcset="./public/hero-img-mobile.png" media="screen and (max-width: 960px)">
+            <img class="Hero-img maq" src="./public/hero-img-desktop.png" alt="imagen">
+        </picture>
         <div class="div-numbers maq"></div>
     </section>
 
